# fixedptc

./: CMakeLists.txt  test.c
.github/workflows/: cmake-multi-platform.yml
